# get_linknum

./: CMakeLists.txt  Makefile  ctdb_ip.cpp  ctdb_ip.h  get_linknum.cpp  handle_information.cpp  links_xml.py  loadbalancexml.py  send_linknum.cpp  share_memory.cpp  share_memory.h  test.cpp  utils.cpp  utils.h
