PROJECT(get_send_linknum)
set(GET_SRC get_linknum.cpp share_memory.cpp utils.cpp)
set(SEND_SRC send_linknum.cpp share_memory.cpp utils.cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(get_linknum ${GET_SRC})
add_executable(send_linknum ${SEND_SRC})
include_directories(/usr/local/include/libxml2/)
include_directories(/usr/include/)
target_link_libraries(get_linknum pthread rt xml2)
target_link_libraries(send_linknum pthread rt xml2 netsnmp)
