PROJECT(collect_send)
set(SRC handle_information.cpp utils.cpp ctdb_ip.cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(collect_send ${SRC})
include_directories(/usr/local/include/libxml2/)
include_directories(/usr/include/)
target_link_libraries(collect_send pthread rt xml2 netsnmp)
